--- a/typescript/package.json
+++ b/typescript/package.json
@@ -24,8 +24,10 @@
     "@typescript-eslint/typescript-estree": "^7.16.0",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3",
+    "error-stack-parser": "^2.1.4",
     "express": "^4.19.2",
     "source-map": "^0.7.4",
+    "uuid": "^10.0.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
