--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,12 +4,14 @@
   "description": "GenAI Exception Debugging Developer Tools",
   "main": "dist/src/index.js",
   "scripts": {
-    "start": "node ./dist/src/index.js",
-    "build": "tsc -p tsconfig.json",
-    "dev": "concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/index.js\"",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "test": "jest --coverage"
+    "start": "NODE_ENV=production node ./dist/src/index.js",
+    "dev": "NODE_ENV=development concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/index.js\" \"webpack serve --mode development\"",
+    "dev:api": "NODE_ENV=development concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/index.js\"",
+    "dev:webapp": "NODE_ENV=development webpack serve --mode development",
+    "build": "npm run build:api && npm run build:webapp",
+    "build:api": "tsc -p tsconfig.json",
+    "build:webapp": "webpack --mode production",
+    "test": "jest" 
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,9 @@
     "acorn-walk": "^8.3.3",
     "error-stack-parser": "^2.1.4",
     "express": "^4.19.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.0",
     "source-map": "^0.7.4",
     "uuid": "^10.0.0",
     "winston": "^3.13.0"
@@ -34,14 +39,23 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "eslint": "^9.6.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.0",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
