--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "outDir": "dist",
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*", "genai-debugging/**/*"],
   "exclude": ["node_modules"]
