--- a/typescript/package.json
+++ b/typescript/package.json
@@ -2,16 +2,12 @@
   "name": "catch-to-llm",
   "version": "0.1.0",
   "description": "GenAI Exception Debugging Developer Tools",
-  "main": "dist/src/index.js",
+  "main": "dist/src/server.js",
   "scripts": {
-    "start": "NODE_ENV=production node ./dist/src/index.js",
-    "dev": "NODE_ENV=development concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/index.js\" \"webpack serve --mode development\"",
-    "dev:api": "NODE_ENV=development concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/index.js\"",
-    "dev:webapp": "NODE_ENV=development webpack serve --mode development",
-    "build": "npm run build:api && npm run build:webapp",
-    "build:api": "tsc -p tsconfig.json",
-    "build:webapp": "webpack --mode production",
-    "test": "jest" 
+    "start": "NODE_ENV=production node ./dist/server.js",
+    "dev": "concurrently \"tsc -w -p tsconfig.json\" \"webpack serve --mode development\"", 
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,6 +22,7 @@
     "@typescript-eslint/typescript-estree": "^7.16.0",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.3",
+    "dotenv": "^16.4.5",
     "error-stack-parser": "^2.1.4",
     "express": "^4.19.2",
     "react": "^18.3.1",
@@ -44,7 +41,6 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5",
     "eslint": "^9.6.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
