--- a/typescript/package.json
+++ b/typescript/package.json
@@ -5,11 +5,11 @@
   "main": "dist/src/server.js",
   "scripts": {
     "start": "NODE_ENV=production node ./dist/src/index.js",
-    "dev": "concurrently \"npm run dev:api\" \"npm run dev:webapp\"",
-    "dev:api": "NODE_ENV=development concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/server.js\"",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:webapp\"",
+    "dev:server": "NODE_ENV=development concurrently \"tsc -w -p tsconfig.json\" \"nodemon ./dist/src/server.js\"",
     "dev:webapp": "webpack serve --config webpack.config.webapp.js --mode development",
-    "build": "npm run build:api && npm run build:webapp",
-    "build:api": "tsc -p tsconfig.json",
+    "build": "npm run build:server && npm run build:webapp",
+    "build:server": "tsc -p tsconfig.json",
     "build:webapp": "webpack --config webpack.config.webapp.js --mode production",
     "test": "jest" 
   },
