--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -7,6 +7,6 @@
     "esModuleInterop": true,
     "jsx": "react-jsx"
   },
-  "include": ["src/**/*", "genai-debugging/**/*"],
+  "include": ["src/**/*", "catch-to-llm/**/*"],
   "exclude": ["node_modules"]
 }
