Working on converting catch-to-llm to a package

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # TypeScript build output
 /typescript/dist/
 /typescript/public/
+/typescript/catch-to-llm/dist/
 
 # TypeScript cache
 /typescript/.tscache/
