--- a/typescript/catch-to-llm/tsconfig.server.json
+++ b/typescript/catch-to-llm/tsconfig.server.json
@@ -1,10 +1,15 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist/server",
-    "rootDir": "./server"
+    "target": "es2020",
+    "module": "commonjs",
+    "outDir": "dist",
+    "sourceMap": true,
+    "esModuleInterop": true
   },
   "include": [
-    "server/**/*"
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
